@@ -4,7 +4,6 @@
 
 <MODE>
 	<RULES>
-		<TERMINATE AT_CHAR="1"/>
 		<EOL_SPAN TYPE="KEYWORD1" AT_LINE_START="TRUE">+</EOL_SPAN>
 		<EOL_SPAN TYPE="KEYWORD1" AT_LINE_START="TRUE">&gt;</EOL_SPAN>
 		<EOL_SPAN TYPE="KEYWORD2" AT_LINE_START="TRUE">-</EOL_SPAN>
